[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miya-pay"
version = "0.1.0"
description = "PayPay API wrapper with AWS WAF Solver (Based on PayPaython-mobile & paypaypy)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.0.0",
    "pkce>=1.0.0",
    "pyscrypt>=1.0.0",
    "tls-client>=1.0.1",
    "cryptography>=42.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/paypaython-boost"
